igt@i915_pm_rps@reset - abort/incomplete - BUG: kernel NULL pointer dereference, address: 00000000000004c8
<6> [84.946383] Console: switching to colour dummy device 80x25
<6> [84.946436] [IGT] i915_pm_rps: executing
<7> [84.947544] i915 0000:00:02.0: [drm:intel_power_well_disable [i915]] disabling DC_off
<7> [84.947769] i915 0000:00:02.0: [drm:skl_enable_dc6 [i915]] Enabling DC6
<7> [84.947947] i915 0000:00:02.0: [drm:gen9_set_dc_state.part.0 [i915]] Setting DC state from 00 to 02
<7> [84.949584] i915 0000:00:02.0: [drm:i915_gem_open [i915]]
<7> [84.950042] i915 0000:00:02.0: [drm:i915_drop_caches_set [i915]] Dropping caches: 0x000001dc [0x000001dc]
<7> [84.950195] i915 0000:00:02.0: [drm:i915_gem_open [i915]]
<7> [84.950507] i915 0000:00:02.0: [drm:i915_gem_open [i915]]
<6> [84.954533] [IGT] i915_pm_rps: starting subtest reset
<7> [84.956744] i915 0000:00:02.0: [drm:i915_gem_open [i915]]
<7> [85.899512] i915 0000:00:02.0: [drm:intel_tc_port_update_mode [i915]] Port E/TC#2: TC port mode reset (tbt-alt -> disconnected)
<7> [85.899505] i915 0000:00:02.0: [drm:intel_tc_port_update_mode [i915]] Port F/TC#3: TC port mode reset (tbt-alt -> disconnected)
<7> [85.899505] i915 0000:00:02.0: [drm:intel_tc_port_update_mode [i915]] Port G/TC#4: TC port mode reset (tbt-alt -> disconnected)
<7> [85.900047] i915 0000:00:02.0: [drm:intel_power_well_disable [i915]] disabling TC_cold_off
<7> [85.900273] i915 0000:00:02.0: [drm:__intel_display_power_put_domain [i915]] TC cold unblock succeeded
<7> [85.900444] i915 0000:00:02.0: [drm:intel_tc_port_update_mode [i915]] Port D/TC#1: TC port mode reset (legacy -> disconnected)
<1> [86.220988] BUG: kernel NULL pointer dereference, address: 00000000000004c8
<1> [86.220996] #PF: supervisor read access in kernel mode
<1> [86.220999] #PF: error_code(0x0000) - not-present page
<6> [86.221002] PGD 0 P4D 0
<4> [86.221004] Oops: Oops: 0000 [#1] PREEMPT SMP NOPTI
<4> [86.221008] CPU: 7 UID: 0 PID: 1223 Comm: i915_pm_rps Not tainted 6.11.0-Patchwork_139162v2-g26055f21c653+ #1
<4> [86.221012] Hardware name: Intel(R) Client Systems NUC11TNHi5/NUC11TNBi5, BIOS TNTGL357.0042.2020.1221.1743 12/21/2020
<4> [86.221016] RIP: 0010:__i915_gpu_coredump+0x56b/0x8e0 [i915]
<4> [86.221166] Code: 00 00 48 c7 c7 40 c4 73 82 48 8d 35 00 00 00 00 e8 ca 69 88 e0 e8 85 eb 8b e0 80 7c 24 10 00 75 3a 48 8b 44 24 18 49 8d 55 18 <44> 0f b7 88 c8 04 00 00 48 8b 44 24 20 4c 8b 40 28 48 8b 48 20 49
<4> [86.221173] RSP: 0018:ffffc90004383c10 EFLAGS: 00010246
<4> [86.221176] RAX: 0000000000000000 RBX: ffff88811e7de400 RCX: ffffc90004383bcc
<4> [86.221180] RDX: ffff88810f81a018 RSI: ffffffff8240f8a6 RDI: ffffffff8242f7cb
<4> [86.221183] RBP: 0000000000000000 R08: 000000000000000e R09: 000000000000000e
<4> [86.221186] R10: 0000000000000001 R11: ffff88812123e040 R12: ffff888112feb800
<4> [86.221189] R13: ffff88810f81a000 R14: ffff888115427400 R15: ffff888114602000
<4> [86.221192] FS: 00007f64d2c12900(0000) GS:ffff8884a01c0000(0000) knlGS:0000000000000000
<4> [86.221197] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [86.221200] CR2: 00000000000004c8 CR3: 000000010b28a006 CR4: 0000000000f70ef0
<4> [86.221203] PKRU: 55555554
<4> [86.221205] Call Trace:
<4> [86.221207] <TASK>
<4> [86.221208] ? __die+0x1e/0x60
<4> [86.221213] ? page_fault_oops+0x157/0x470
<4> [86.221217] ? do_user_addr_fault+0x63/0x710
<4> [86.221220] ? exc_page_fault+0x68/0x1f0
<4> [86.221224] ? asm_exc_page_fault+0x26/0x30
<4> [86.221230] ? __i915_gpu_coredump+0x56b/0x8e0 [i915]
<4> [86.221356] i915_capture_error_state+0x5e/0xd0 [i915]
<4> [86.221479] intel_gt_handle_error+0x2d2/0x3e0 [i915]
<4> [86.221604] ? intel_gt_debugfs_reset_store+0x33/0xc0 [i915]
<4> [86.221719] i915_wedged_set+0x1d/0x40 [i915]
<4> [86.221824] simple_attr_write_xsigned.isra.0+0xb2/0x110
<4> [86.221830] full_proxy_write+0x58/0x80
<4> [86.221835] vfs_write+0xd0/0x570
<4> [86.221839] ? _raw_spin_unlock_irqrestore+0x52/0x80
<4> [86.221843] ? lockdep_hardirqs_on+0x7b/0x100
<4> [86.221847] ? _raw_spin_unlock_irqrestore+0x3b/0x80
<4> [86.221851] ksys_write+0x68/0xf0
<4> [86.221855] do_syscall_64+0x68/0x140
<4> [86.221858] entry_SYSCALL_64_after_hwframe+0x76/0x7e
<4> [86.221862] RIP: 0033:0x7f64d4d1c574
<4> [86.221865] Code: c7 00 16 00 00 00 b8 ff ff ff ff c3 66 2e 0f 1f 84 00 00 00 00 00 f3 0f 1e fa 80 3d d5 ea 0e 00 00 74 13 b8 01 00 00 00 0f 05 <48> 3d 00 f0 ff ff 77 54 c3 0f 1f 00 55 48 89 e5 48 83 ec 20 48 89
<4> [86.221872] RSP: 002b:00007ffd498a3908 EFLAGS: 00000202 ORIG_RAX: 0000000000000001
<4> [86.221876] RAX: ffffffffffffffda RBX: 0000000000000000 RCX: 00007f64d4d1c574
<4> [86.221879] RDX: 0000000000000014 RSI: 00007ffd498a3970 RDI: 0000000000000015
<4> [86.221883] RBP: 0000000000000014 R08: 0000000000000075 R09: 0000000000000000
<4> [86.221886] R10: 0000000000000000 R11: 0000000000000202 R12: 00007ffd498a3970
<4> [86.221889] R13: 0000000000000015 R14: 00007ffd498a3a40 R15: 00007ffd498a3970
<4> [86.221893] </TASK>
<4> [86.221895] Modules linked in: vgem drm_shmem_helper amdgpu amdxcp drm_ttm_helper gpu_sched drm_suballoc_helper drm_exec snd_hda_codec_hdmi i915 x86_pkg_temp_thermal coretemp mei_pxp mei_hdcp wmi_bmof kvm_intel kvm btusb btrtl prime_numbers igc btintel snd_hda_intel btbcm i2c_algo_bit crct10dif_pclmul ttm bluetooth video mei_me snd_intel_dspcfg ptp crc32_pclmul ghash_clmulni_intel pps_core snd_hda_codec mei snd_hwdep i2c_i801 drm_display_helper snd_hda_core i2c_mux thunderbolt snd_pcm drm_buddy i2c_smbus intel_lpss_pci wmi fuse
<4> [86.221934] CR2: 00000000000004c8
<4> [86.221937] ---[ end trace 0000000000000000 ]---